feat: add more test and examples
